add support for other use cases in the example cdn
- add input validation for mandatory cdn fields
- object properties that use x-terraform-field-name
