# examples/swaggercodegen/api/api/content_delivery_network_v1_array_of_objects_example.go
@@ -12,5 +12,8 @@ package api
 
 type ContentDeliveryNetworkV1ArrayOfObjectsExample struct {
 
-	Protocol string `json:"protocol,omitempty"`
+	Protocol string `json:"protocol"`
+
+	OriginPort int32 `json:"originPort"`
+
 }
